# repocontext

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.docker/: Dockerfile.cpu  Dockerfile.cuda
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
crates/repocontext-cli/: Cargo.toml
crates/repocontext-cli/src/: main.rs  orchestrator.rs
crates/repocontext-cli/src/commands/: check.rs  extract.rs  generate.rs  init.rs  mod.rs  model.rs
crates/repocontext-core/: Cargo.toml
crates/repocontext-core/src/: config.rs  lib.rs  metadata.rs  salience.rs  symbol.rs  synth.rs  walker.rs
crates/repocontext-enrich/: Cargo.toml
crates/repocontext-enrich/src/: assembler.rs  backend.rs  chunker.rs  inference.rs  lib.rs  model.rs  orchestrator.rs  prompt.rs  prompts.rs  types.rs
crates/repocontext-enrich/src/cache/: json.rs  mod.rs  redis.rs
crates/repocontext-lang-go/: Cargo.toml
crates/repocontext-lang-go/src/: extractor.rs  lib.rs
crates/repocontext-lang-go/src/queries/: go.scm
crates/repocontext-lang-ts/: Cargo.toml
crates/repocontext-lang-ts/src/: extractor.rs  lib.rs
crates/repocontext-lang-ts/src/queries/: typescript.scm
examples/: README.md  sample-context_temp.md
prompts/: chunk_architecture.md  chunk_data_models.md  chunk_implementation.md  chunk_implementation_elided.md  chunk_module.md  chunk_overview.md
