[package]
name = "repocontext-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "repocontext CLI (binary). Two-stage codebase context generator."

[[bin]]
name = "repocontext"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
is-terminal.workspace = true
serde.workspace = true
serde_json.workspace = true
repocontext-core = { path = "../repocontext-core" }
repocontext-lang-ts = { path = "../repocontext-lang-ts" }

[dev-dependencies]
tempfile.workspace = true
