[package]
name = "repocontext-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Deterministic Stage 1 indexing, walking, salience, and synthesis for repocontext."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ignore.workspace = true
globset.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
